httpd-demo/httpd-route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: httpd-route
spec:
  host: www.chuck.test.httpd.route.example
  to:
    kind: Service
    name: httpd-service
    weight: 100
  port:
    targetPort: 8080
  wildcardPolicy: None
